--- a/src/Components/SignInStyles.css
+++ b/src/Components/SignInStyles.css
@@ -1,6 +1,11 @@
 /* styles.css */
 #root{
-    background-image: url('./1.jpg');
+  background-image: url('./1.jpg');
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 .shape{
 
