--- a/src/Components/SignInStyles.css
+++ b/src/Components/SignInStyles.css
@@ -1,6 +1,6 @@
 /* styles.css */
 #root{
-  background-image: url('./1.jpg');
+  /* background-image: url('./1.jpg'); */
   position: fixed;
   top: 0;
   left: 0;
@@ -13,6 +13,7 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
+  background-image: url('./1.jpg');
 }
 
 .signin-form {
